correct some mapping, add artificial areas

--- a/Land_cover_5year_classification.ipynb
+++ b/Land_cover_5year_classification.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "01643b78-be24-4078-a7ae-9ca49b66ea2b",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
     "import pandas as pd\n",
     "import xarray as xr\n",
     "import geopandas as gpd\n",
-    "from xrspatial.classify import reclassify\n",
+    "from xrspatial.classify import reclassify #in a terminal (add a new tab, blue plus button):  pip install xarray-spatial\n",
     "\n",
     "sys.path.insert(1, os.path.abspath(\"../Tools\"))\n",
     "from dea_tools.landcover import lc_animation, plot_land_cover\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "4a937139-9f87-4316-8f4f-3e5e42a34c12",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "7d6a3ae3-fb45-4f72-b5e8-89b64cdc6b4e",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_8c15171e642022b0dbaddf9f7f60ba8d {\n",
+       "                #map_8ae41f91c075ac9bffda12cc8f18e3fd {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -148,13 +148,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_8c15171e642022b0dbaddf9f7f60ba8d&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_8ae41f91c075ac9bffda12cc8f18e3fd&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_8c15171e642022b0dbaddf9f7f60ba8d = L.map(\n",
-       "                &quot;map_8c15171e642022b0dbaddf9f7f60ba8d&quot;,\n",
+       "            var map_8ae41f91c075ac9bffda12cc8f18e3fd = L.map(\n",
+       "                &quot;map_8ae41f91c075ac9bffda12cc8f18e3fd&quot;,\n",
        "                {\n",
        "                    center: [-37.50340986649503, 140.5325106913739],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -168,35 +168,35 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_127612805a26d888ea0fede95cd31335 = L.tileLayer(\n",
+       "            var tile_layer_c4decdff40bc8ac099c206f77eb9a376 = L.tileLayer(\n",
        "                &quot;http://mt1.google.com/vt/lyrs=y\\u0026z={z}\\u0026x={x}\\u0026y={y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_8c15171e642022b0dbaddf9f7f60ba8d);\n",
+       "            ).addTo(map_8ae41f91c075ac9bffda12cc8f18e3fd);\n",
        "        \n",
        "    \n",
-       "            var poly_line_21dc67838e6d9cc830f66db9c8b536f2 = L.polyline(\n",
+       "            var poly_line_e355c53cfd5f89dc4aa0bf270b5a5b80 = L.polyline(\n",
        "                [[-38.11895730145432, 139.7399818841844], [-38.11895730145432, 141.32503949856337], [-36.887862431535744, 141.32503949856337], [-36.887862431535744, 139.7399818841844], [-38.11895730145432, 139.7399818841844]],\n",
        "                {&quot;bubblingMouseEvents&quot;: true, &quot;color&quot;: &quot;red&quot;, &quot;dashArray&quot;: null, &quot;dashOffset&quot;: null, &quot;fill&quot;: false, &quot;fillColor&quot;: &quot;red&quot;, &quot;fillOpacity&quot;: 0.2, &quot;fillRule&quot;: &quot;evenodd&quot;, &quot;lineCap&quot;: &quot;round&quot;, &quot;lineJoin&quot;: &quot;round&quot;, &quot;noClip&quot;: false, &quot;opacity&quot;: 0.8, &quot;smoothFactor&quot;: 1.0, &quot;stroke&quot;: true, &quot;weight&quot;: 3}\n",
-       "            ).addTo(map_8c15171e642022b0dbaddf9f7f60ba8d);\n",
+       "            ).addTo(map_8ae41f91c075ac9bffda12cc8f18e3fd);\n",
        "        \n",
        "    \n",
-       "                var lat_lng_popup_619120cb4a6eaa355f5508f3234c3931 = L.popup();\n",
+       "                var lat_lng_popup_c50921e36d96da53906e5288839b5fec = L.popup();\n",
        "                function latLngPop(e) {\n",
-       "                    lat_lng_popup_619120cb4a6eaa355f5508f3234c3931\n",
+       "                    lat_lng_popup_c50921e36d96da53906e5288839b5fec\n",
        "                        .setLatLng(e.latlng)\n",
        "                        .setContent(&quot;Latitude: &quot; + e.latlng.lat.toFixed(4) +\n",
        "                                    &quot;&lt;br&gt;Longitude: &quot; + e.latlng.lng.toFixed(4))\n",
-       "                        .openOn(map_8c15171e642022b0dbaddf9f7f60ba8d);\n",
+       "                        .openOn(map_8ae41f91c075ac9bffda12cc8f18e3fd);\n",
        "                    }\n",
-       "                map_8c15171e642022b0dbaddf9f7f60ba8d.on(&#x27;click&#x27;, latLngPop);\n",
+       "                map_8ae41f91c075ac9bffda12cc8f18e3fd.on(&#x27;click&#x27;, latLngPop);\n",
        "            \n",
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x7f2e884083d0>"
+       "<folium.folium.Map at 0x7ff3c86814c0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "6fac84a5-4dde-4597-8431-5119e12234cc",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
     "        product=\"ga_ls_landcover_class_cyear_2\",\n",
     "        output_crs=\"EPSG:3577\",\n",
     "        #measurements=[\"level3\", \"level4\", \"waterper_wat_cat_l4d_au\"],\n",
-    "        measurements=[\"lifeform\",\"water_state\"],\n",
+    "        measurements=[\"lifeform\",\"water_state\",\"level3\"],\n",
     "        resolution=(-25, 25),\n",
     "        **query\n",
     "    )\n",
@@ -244,12 +244,25 @@
     "          overwrite=True)\n",
     "    \n",
     "    water=land_cover_data.water_state.median(dim='time')\n",
-    "    water=reclassify(water,bins=[0,1,2],new_values=[np.nan,0,1])\n",
     "    write_cog(geo_im=water,\n",
     "          fname='5yrMedian/Water_' + str(year -4) + '-' + str(year) +'.tif',\n",
     "          overwrite=True)\n",
+    "                      \n",
+    "    artificial=land_cover_data.level3.median(dim='time')\n",
+    "    artificial=reclassify(artificial,bins=[0,111,112,124,215,216,220],new_values=[np.nan,0,0,0,1,1,0]) #looking at Mt Gambier and Millicent, 'natural bare surface' aligns with built up areas as well as artifical surface.\n",
+    "    write_cog(geo_im=artificial,\n",
+    "          fname='5yrMedian/Artificial_' + str(year -4) + '-' + str(year) +'.tif',\n",
+    "          overwrite=True)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e08474d-ad3b-4bf1-be4b-b42f87cd5f3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
