export as int rasters

--- a/Land_cover_5year_classification.ipynb
+++ b/Land_cover_5year_classification.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "6fac84a5-4dde-4597-8431-5119e12234cc",
    "metadata": {},
    "outputs": [],
@@ -239,18 +239,18 @@
     "    \n",
     "    woody=land_cover_data.lifeform.median(dim='time')\n",
     "    woody=reclassify(woody,bins=[0,1,2],new_values=[np.nan,0,1])\n",
-    "    write_cog(geo_im=woody,\n",
+    "    write_cog(geo_im=woody.astype(np.int16),\n",
     "          fname='5yrMedian/Woody_' + str(year -4) + '-' + str(year) +'.tif',\n",
     "          overwrite=True)\n",
     "    \n",
     "    water=land_cover_data.water_state.median(dim='time')\n",
-    "    write_cog(geo_im=water,\n",
+    "    write_cog(geo_im=water.astype(np.int16),\n",
     "          fname='5yrMedian/Water_' + str(year -4) + '-' + str(year) +'.tif',\n",
     "          overwrite=True)\n",
     "                      \n",
     "    artificial=land_cover_data.level3.median(dim='time')\n",
     "    artificial=reclassify(artificial,bins=[0,111,112,124,215,216,220],new_values=[np.nan,0,0,0,1,1,0]) #looking at Mt Gambier and Millicent, 'natural bare surface' aligns with built up areas as well as artifical surface.\n",
-    "    write_cog(geo_im=artificial,\n",
+    "    write_cog(geo_im=artificial.astype(np.int16),\n",
     "          fname='5yrMedian/Artificial_' + str(year -4) + '-' + str(year) +'.tif',\n",
     "          overwrite=True)\n",
     "    "
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e08474d-ad3b-4bf1-be4b-b42f87cd5f3f",
+   "id": "d6f895f2-3691-4874-b3ef-1bc1414d2495",
    "metadata": {},
    "outputs": [],
    "source": []
