--- a/Land_cover_5year_classification.ipynb
+++ b/Land_cover_5year_classification.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "01643b78-be24-4078-a7ae-9ca49b66ea2b",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4a937139-9f87-4316-8f4f-3e5e42a34c12",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7d6a3ae3-fb45-4f72-b5e8-89b64cdc6b4e",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_8ae41f91c075ac9bffda12cc8f18e3fd {\n",
+       "                #map_d7a095fb02785cf0bbb803f0ff4bbe64 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -148,15 +148,15 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_8ae41f91c075ac9bffda12cc8f18e3fd&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_d7a095fb02785cf0bbb803f0ff4bbe64&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_8ae41f91c075ac9bffda12cc8f18e3fd = L.map(\n",
-       "                &quot;map_8ae41f91c075ac9bffda12cc8f18e3fd&quot;,\n",
+       "            var map_d7a095fb02785cf0bbb803f0ff4bbe64 = L.map(\n",
+       "                &quot;map_d7a095fb02785cf0bbb803f0ff4bbe64&quot;,\n",
        "                {\n",
-       "                    center: [-37.50340986649503, 140.5325106913739],\n",
+       "                    center: [-37.5034232782532, 140.53250392454152],\n",
        "                    crs: L.CRS.EPSG3857,\n",
        "                    zoom: 8,\n",
        "                    zoomControl: true,\n",
@@ -168,42 +168,42 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_c4decdff40bc8ac099c206f77eb9a376 = L.tileLayer(\n",
+       "            var tile_layer_06288ec956c48d99dac918c22fbcc28f = L.tileLayer(\n",
        "                &quot;http://mt1.google.com/vt/lyrs=y\\u0026z={z}\\u0026x={x}\\u0026y={y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_8ae41f91c075ac9bffda12cc8f18e3fd);\n",
+       "            ).addTo(map_d7a095fb02785cf0bbb803f0ff4bbe64);\n",
        "        \n",
        "    \n",
-       "            var poly_line_e355c53cfd5f89dc4aa0bf270b5a5b80 = L.polyline(\n",
-       "                [[-38.11895730145432, 139.7399818841844], [-38.11895730145432, 141.32503949856337], [-36.887862431535744, 141.32503949856337], [-36.887862431535744, 139.7399818841844], [-38.11895730145432, 139.7399818841844]],\n",
+       "            var poly_line_e40cb6c18707c04a41b2dcb553b7232d = L.polyline(\n",
+       "                [[-38.11897068542496, 139.73997498209286], [-38.11897068542496, 141.3250328669902], [-36.88787587108144, 141.3250328669902], [-36.88787587108144, 139.73997498209286], [-38.11897068542496, 139.73997498209286]],\n",
        "                {&quot;bubblingMouseEvents&quot;: true, &quot;color&quot;: &quot;red&quot;, &quot;dashArray&quot;: null, &quot;dashOffset&quot;: null, &quot;fill&quot;: false, &quot;fillColor&quot;: &quot;red&quot;, &quot;fillOpacity&quot;: 0.2, &quot;fillRule&quot;: &quot;evenodd&quot;, &quot;lineCap&quot;: &quot;round&quot;, &quot;lineJoin&quot;: &quot;round&quot;, &quot;noClip&quot;: false, &quot;opacity&quot;: 0.8, &quot;smoothFactor&quot;: 1.0, &quot;stroke&quot;: true, &quot;weight&quot;: 3}\n",
-       "            ).addTo(map_8ae41f91c075ac9bffda12cc8f18e3fd);\n",
+       "            ).addTo(map_d7a095fb02785cf0bbb803f0ff4bbe64);\n",
        "        \n",
        "    \n",
-       "                var lat_lng_popup_c50921e36d96da53906e5288839b5fec = L.popup();\n",
+       "                var lat_lng_popup_f3bb1f739b2c274aee4e4a67b59692bf = L.popup();\n",
        "                function latLngPop(e) {\n",
-       "                    lat_lng_popup_c50921e36d96da53906e5288839b5fec\n",
+       "                    lat_lng_popup_f3bb1f739b2c274aee4e4a67b59692bf\n",
        "                        .setLatLng(e.latlng)\n",
        "                        .setContent(&quot;Latitude: &quot; + e.latlng.lat.toFixed(4) +\n",
        "                                    &quot;&lt;br&gt;Longitude: &quot; + e.latlng.lng.toFixed(4))\n",
-       "                        .openOn(map_8ae41f91c075ac9bffda12cc8f18e3fd);\n",
+       "                        .openOn(map_d7a095fb02785cf0bbb803f0ff4bbe64);\n",
        "                    }\n",
-       "                map_8ae41f91c075ac9bffda12cc8f18e3fd.on(&#x27;click&#x27;, latLngPop);\n",
+       "                map_d7a095fb02785cf0bbb803f0ff4bbe64.on(&#x27;click&#x27;, latLngPop);\n",
        "            \n",
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x7ff3c86814c0>"
+       "<folium.folium.Map at 0x7f0843652d00>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gdf = gpd.read_file('shp/Model_Domain.shp')\n",
-    "bounds=gpd.GeoDataFrame(gdf).to_crs(\"EPSG:4326\").bounds\n",
+    "bounds=gpd.GeoDataFrame(gdf).to_crs(\"EPSG:4283\").bounds\n",
     "\n",
     "#bounds need to be slightly larger for later clip to work\n",
     "lon=(bounds.minx,bounds.maxx)\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "6fac84a5-4dde-4597-8431-5119e12234cc",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
     "    # Load DEA Land Cover data from the datacube\n",
     "    land_cover_data = dc.load(\n",
     "        product=\"ga_ls_landcover_class_cyear_2\",\n",
-    "        output_crs=\"EPSG:3577\",\n",
+    "        output_crs=\"EPSG:4283\",\n",
     "        #measurements=[\"level3\", \"level4\", \"waterper_wat_cat_l4d_au\"],\n",
     "        measurements=[\"lifeform\",\"water_state\",\"level3\"],\n",
     "        resolution=(-25, 25),\n",
@@ -238,7 +238,7 @@
     "    )\n",
     "    \n",
     "    woody=land_cover_data.lifeform.median(dim='time')\n",
-    "    woody=reclassify(woody,bins=[0,1,2],new_values=[np.nan,0,1])\n",
+    "    woody=reclassify(woody,bins=[0,1,2],new_values=[np.nan,1,0])\n",
     "    write_cog(geo_im=woody.astype(np.int16),\n",
     "          fname='5yrMedian/Woody_' + str(year -4) + '-' + str(year) +'.tif',\n",
     "          overwrite=True)\n",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6f895f2-3691-4874-b3ef-1bc1414d2495",
+   "id": "037ee991-865d-4528-8fb4-8ff026f64db4",
    "metadata": {},
    "outputs": [],
    "source": []
