Extend domain to top of LLC

--- a/Land_cover_5year_classification.ipynb
+++ b/Land_cover_5year_classification.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "01643b78-be24-4078-a7ae-9ca49b66ea2b",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4a937139-9f87-4316-8f4f-3e5e42a34c12",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7d6a3ae3-fb45-4f72-b5e8-89b64cdc6b4e",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_ab7fcd50b01a2cc5fb963a94dd4590f6 {\n",
+       "                #map_ae1855340f6e694375b653ce42713e7e {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -148,15 +148,15 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_ab7fcd50b01a2cc5fb963a94dd4590f6&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_ae1855340f6e694375b653ce42713e7e&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_ab7fcd50b01a2cc5fb963a94dd4590f6 = L.map(\n",
-       "                &quot;map_ab7fcd50b01a2cc5fb963a94dd4590f6&quot;,\n",
+       "            var map_ae1855340f6e694375b653ce42713e7e = L.map(\n",
+       "                &quot;map_ae1855340f6e694375b653ce42713e7e&quot;,\n",
        "                {\n",
-       "                    center: [-37.50340986649503, 140.5325106913739],\n",
+       "                    center: [-37.310020122993635, 140.49823245895973],\n",
        "                    crs: L.CRS.EPSG3857,\n",
        "                    zoom: 8,\n",
        "                    zoomControl: true,\n",
@@ -168,41 +168,41 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_37f9e03ee127e28e1917e74992efeafa = L.tileLayer(\n",
+       "            var tile_layer_95b4ed60b0dcb5edc0be20c434f595ba = L.tileLayer(\n",
        "                &quot;http://mt1.google.com/vt/lyrs=y\\u0026z={z}\\u0026x={x}\\u0026y={y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_ab7fcd50b01a2cc5fb963a94dd4590f6);\n",
+       "            ).addTo(map_ae1855340f6e694375b653ce42713e7e);\n",
        "        \n",
        "    \n",
-       "            var poly_line_100474f2b762d142bd343db5e704d6a9 = L.polyline(\n",
-       "                [[-38.11895730145432, 139.7399818841844], [-38.11895730145432, 141.32503949856337], [-36.887862431535744, 141.32503949856337], [-36.887862431535744, 139.7399818841844], [-38.11895730145432, 139.7399818841844]],\n",
+       "            var poly_line_80ebed47e1a88c5b9e83f4040510ee9a = L.polyline(\n",
+       "                [[-38.15491826670536, 139.67063999738622], [-38.15491826670536, 141.32582492053325], [-36.46512197928192, 141.32582492053325], [-36.46512197928192, 139.67063999738622], [-38.15491826670536, 139.67063999738622]],\n",
        "                {&quot;bubblingMouseEvents&quot;: true, &quot;color&quot;: &quot;red&quot;, &quot;dashArray&quot;: null, &quot;dashOffset&quot;: null, &quot;fill&quot;: false, &quot;fillColor&quot;: &quot;red&quot;, &quot;fillOpacity&quot;: 0.2, &quot;fillRule&quot;: &quot;evenodd&quot;, &quot;lineCap&quot;: &quot;round&quot;, &quot;lineJoin&quot;: &quot;round&quot;, &quot;noClip&quot;: false, &quot;opacity&quot;: 0.8, &quot;smoothFactor&quot;: 1.0, &quot;stroke&quot;: true, &quot;weight&quot;: 3}\n",
-       "            ).addTo(map_ab7fcd50b01a2cc5fb963a94dd4590f6);\n",
+       "            ).addTo(map_ae1855340f6e694375b653ce42713e7e);\n",
        "        \n",
        "    \n",
-       "                var lat_lng_popup_9dbb1562acaa5c59037d5c85ccd5d5b7 = L.popup();\n",
+       "                var lat_lng_popup_132a1b8e9724ff0371ed2a56c883f3d9 = L.popup();\n",
        "                function latLngPop(e) {\n",
-       "                    lat_lng_popup_9dbb1562acaa5c59037d5c85ccd5d5b7\n",
+       "                    lat_lng_popup_132a1b8e9724ff0371ed2a56c883f3d9\n",
        "                        .setLatLng(e.latlng)\n",
        "                        .setContent(&quot;Latitude: &quot; + e.latlng.lat.toFixed(4) +\n",
        "                                    &quot;&lt;br&gt;Longitude: &quot; + e.latlng.lng.toFixed(4))\n",
-       "                        .openOn(map_ab7fcd50b01a2cc5fb963a94dd4590f6);\n",
+       "                        .openOn(map_ae1855340f6e694375b653ce42713e7e);\n",
        "                    }\n",
-       "                map_ab7fcd50b01a2cc5fb963a94dd4590f6.on(&#x27;click&#x27;, latLngPop);\n",
+       "                map_ae1855340f6e694375b653ce42713e7e.on(&#x27;click&#x27;, latLngPop);\n",
        "            \n",
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x7f0dc6609190>"
+       "<folium.folium.Map at 0x7f2ff7a18ee0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gdf = gpd.read_file('shp/Model_Domain.shp')\n",
+    "gdf = gpd.read_file('shp/Extended_model_domain.shp')\n",
     "bounds=gpd.GeoDataFrame(gdf).to_crs(\"EPSG:4326\").bounds\n",
     "\n",
     "#bounds need to be slightly larger for later clip to work\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6fac84a5-4dde-4597-8431-5119e12234cc",
    "metadata": {},
    "outputs": [],
