project to GDA94

--- a/Land_cover_5year_classification.ipynb
+++ b/Land_cover_5year_classification.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "01643b78-be24-4078-a7ae-9ca49b66ea2b",
    "metadata": {},
    "outputs": [],
@@ -54,6 +54,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import xarray as xr\n",
+    "import rioxarray\n",
     "import geopandas as gpd\n",
     "from xrspatial.classify import reclassify #in a terminal (add a new tab, blue plus button):  pip install xarray-spatial\n",
     "\n",
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "4a937139-9f87-4316-8f4f-3e5e42a34c12",
    "metadata": {},
    "outputs": [],
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "7d6a3ae3-fb45-4f72-b5e8-89b64cdc6b4e",
    "metadata": {},
    "outputs": [
@@ -136,7 +137,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_485dc38d09282567995d94f4d97a16a4 {\n",
+       "                #map_4987c3d0a55d4118b511aacd4f3075c9 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -148,13 +149,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_485dc38d09282567995d94f4d97a16a4&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_4987c3d0a55d4118b511aacd4f3075c9&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_485dc38d09282567995d94f4d97a16a4 = L.map(\n",
-       "                &quot;map_485dc38d09282567995d94f4d97a16a4&quot;,\n",
+       "            var map_4987c3d0a55d4118b511aacd4f3075c9 = L.map(\n",
+       "                &quot;map_4987c3d0a55d4118b511aacd4f3075c9&quot;,\n",
        "                {\n",
        "                    center: [-37.310020122993635, 140.49823245895973],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -168,35 +169,35 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_1f449d18f9f22e471de205159107478e = L.tileLayer(\n",
+       "            var tile_layer_b72b90770666adbaa59f7494ead78ac6 = L.tileLayer(\n",
        "                &quot;http://mt1.google.com/vt/lyrs=y\\u0026z={z}\\u0026x={x}\\u0026y={y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_485dc38d09282567995d94f4d97a16a4);\n",
+       "            ).addTo(map_4987c3d0a55d4118b511aacd4f3075c9);\n",
        "        \n",
        "    \n",
-       "            var poly_line_219c63072a15ace8bdb28c54a0c0b8a3 = L.polyline(\n",
+       "            var poly_line_154f0863d40efd107cedc06dda0a7b61 = L.polyline(\n",
        "                [[-38.15491826670536, 139.67063999738622], [-38.15491826670536, 141.32582492053325], [-36.46512197928192, 141.32582492053325], [-36.46512197928192, 139.67063999738622], [-38.15491826670536, 139.67063999738622]],\n",
        "                {&quot;bubblingMouseEvents&quot;: true, &quot;color&quot;: &quot;red&quot;, &quot;dashArray&quot;: null, &quot;dashOffset&quot;: null, &quot;fill&quot;: false, &quot;fillColor&quot;: &quot;red&quot;, &quot;fillOpacity&quot;: 0.2, &quot;fillRule&quot;: &quot;evenodd&quot;, &quot;lineCap&quot;: &quot;round&quot;, &quot;lineJoin&quot;: &quot;round&quot;, &quot;noClip&quot;: false, &quot;opacity&quot;: 0.8, &quot;smoothFactor&quot;: 1.0, &quot;stroke&quot;: true, &quot;weight&quot;: 3}\n",
-       "            ).addTo(map_485dc38d09282567995d94f4d97a16a4);\n",
+       "            ).addTo(map_4987c3d0a55d4118b511aacd4f3075c9);\n",
        "        \n",
        "    \n",
-       "                var lat_lng_popup_7d167aabe97b5ccaf4b8e9ad58dc865a = L.popup();\n",
+       "                var lat_lng_popup_064465d3d2bcbd17b6500a621b982cec = L.popup();\n",
        "                function latLngPop(e) {\n",
-       "                    lat_lng_popup_7d167aabe97b5ccaf4b8e9ad58dc865a\n",
+       "                    lat_lng_popup_064465d3d2bcbd17b6500a621b982cec\n",
        "                        .setLatLng(e.latlng)\n",
        "                        .setContent(&quot;Latitude: &quot; + e.latlng.lat.toFixed(4) +\n",
        "                                    &quot;&lt;br&gt;Longitude: &quot; + e.latlng.lng.toFixed(4))\n",
-       "                        .openOn(map_485dc38d09282567995d94f4d97a16a4);\n",
+       "                        .openOn(map_4987c3d0a55d4118b511aacd4f3075c9);\n",
        "                    }\n",
-       "                map_485dc38d09282567995d94f4d97a16a4.on(&#x27;click&#x27;, latLngPop);\n",
+       "                map_4987c3d0a55d4118b511aacd4f3075c9.on(&#x27;click&#x27;, latLngPop);\n",
        "            \n",
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x7f2ff7a2ba90>"
+       "<folium.folium.Map at 0x7f303871a4c0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "6fac84a5-4dde-4597-8431-5119e12234cc",
    "metadata": {},
    "outputs": [],
@@ -230,8 +231,8 @@
     "    # Load DEA Land Cover data from the datacube\n",
     "    land_cover_data = dc.load(\n",
     "        product=\"ga_ls_landcover_class_cyear_2\",\n",
-    "        #output_crs=\"EPSG:3577\",\n",
-    "        output_crs=\"EPSG:4283\",\n",
+    "        output_crs=\"EPSG:3577\",\n",
+    "        #output_crs=\"EPSG:4283\",\n",
     "        #measurements=[\"level3\", \"level4\", \"waterper_wat_cat_l4d_au\"],\n",
     "        measurements=[\"lifeform\",\"water_state\",\"level3\"],\n",
     "        resolution=(-25, 25),\n",
@@ -240,22 +241,43 @@
     "    \n",
     "    woody=land_cover_data.lifeform.median(dim='time')\n",
     "    woody=reclassify(woody,bins=[0,1,2],new_values=[np.nan,1,0])\n",
+    "    woody=woody.rio.reproject(\"EPSG:4283\")\n",
     "    write_cog(geo_im=woody.astype(np.int16),\n",
     "          fname='5yrMedian/Woody_' + str(year -4) + '-' + str(year) +'.tif',\n",
     "          overwrite=True)\n",
     "    \n",
     "    water=land_cover_data.water_state.median(dim='time')\n",
+    "    water=water.rio.reproject(\"EPSG:4283\")\n",
     "    write_cog(geo_im=water.astype(np.int16),\n",
     "          fname='5yrMedian/Water_' + str(year -4) + '-' + str(year) +'.tif',\n",
     "          overwrite=True)\n",
     "                      \n",
     "    artificial=land_cover_data.level3.median(dim='time')\n",
+    "    artificial=artificial.rio.reproject(\"EPSG:4283\")\n",
     "    artificial=reclassify(artificial,bins=[0,111,112,124,215,216,220],new_values=[np.nan,0,0,0,1,1,0]) #looking at Mt Gambier and Millicent, 'natural bare surface' aligns with built up areas as well as artifical surface.\n",
     "    write_cog(geo_im=artificial.astype(np.int16),\n",
     "          fname='5yrMedian/Artificial_' + str(year -4) + '-' + str(year) +'.tif',\n",
     "          overwrite=True)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce5c1f0f-4e0f-42ce-a4fa-a4fc58dbedf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "woody"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6ff4318-fdca-424b-ba16-c5fa3c419e14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
