--- a/Land_cover_5year_classification.ipynb
+++ b/Land_cover_5year_classification.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "01643b78-be24-4078-a7ae-9ca49b66ea2b",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "4a937139-9f87-4316-8f4f-3e5e42a34c12",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "7d6a3ae3-fb45-4f72-b5e8-89b64cdc6b4e",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_4987c3d0a55d4118b511aacd4f3075c9 {\n",
+       "                #map_df8f1c74f74dc29aeaa55696dd0c2fd6 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -149,13 +149,13 @@
        "&lt;/head&gt;\n",
        "&lt;body&gt;    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_4987c3d0a55d4118b511aacd4f3075c9&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_df8f1c74f74dc29aeaa55696dd0c2fd6&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;    \n",
        "    \n",
-       "            var map_4987c3d0a55d4118b511aacd4f3075c9 = L.map(\n",
-       "                &quot;map_4987c3d0a55d4118b511aacd4f3075c9&quot;,\n",
+       "            var map_df8f1c74f74dc29aeaa55696dd0c2fd6 = L.map(\n",
+       "                &quot;map_df8f1c74f74dc29aeaa55696dd0c2fd6&quot;,\n",
        "                {\n",
        "                    center: [-37.310020122993635, 140.49823245895973],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -169,35 +169,35 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_b72b90770666adbaa59f7494ead78ac6 = L.tileLayer(\n",
+       "            var tile_layer_710d74b66f4ad71f471f7df72c37af6a = L.tileLayer(\n",
        "                &quot;http://mt1.google.com/vt/lyrs=y\\u0026z={z}\\u0026x={x}\\u0026y={y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_4987c3d0a55d4118b511aacd4f3075c9);\n",
+       "            ).addTo(map_df8f1c74f74dc29aeaa55696dd0c2fd6);\n",
        "        \n",
        "    \n",
-       "            var poly_line_154f0863d40efd107cedc06dda0a7b61 = L.polyline(\n",
+       "            var poly_line_9080d55ab1b31fad709d61206d413801 = L.polyline(\n",
        "                [[-38.15491826670536, 139.67063999738622], [-38.15491826670536, 141.32582492053325], [-36.46512197928192, 141.32582492053325], [-36.46512197928192, 139.67063999738622], [-38.15491826670536, 139.67063999738622]],\n",
        "                {&quot;bubblingMouseEvents&quot;: true, &quot;color&quot;: &quot;red&quot;, &quot;dashArray&quot;: null, &quot;dashOffset&quot;: null, &quot;fill&quot;: false, &quot;fillColor&quot;: &quot;red&quot;, &quot;fillOpacity&quot;: 0.2, &quot;fillRule&quot;: &quot;evenodd&quot;, &quot;lineCap&quot;: &quot;round&quot;, &quot;lineJoin&quot;: &quot;round&quot;, &quot;noClip&quot;: false, &quot;opacity&quot;: 0.8, &quot;smoothFactor&quot;: 1.0, &quot;stroke&quot;: true, &quot;weight&quot;: 3}\n",
-       "            ).addTo(map_4987c3d0a55d4118b511aacd4f3075c9);\n",
+       "            ).addTo(map_df8f1c74f74dc29aeaa55696dd0c2fd6);\n",
        "        \n",
        "    \n",
-       "                var lat_lng_popup_064465d3d2bcbd17b6500a621b982cec = L.popup();\n",
+       "                var lat_lng_popup_a6fe1ffa9fa72f3a530f84e2a71ab9b8 = L.popup();\n",
        "                function latLngPop(e) {\n",
-       "                    lat_lng_popup_064465d3d2bcbd17b6500a621b982cec\n",
+       "                    lat_lng_popup_a6fe1ffa9fa72f3a530f84e2a71ab9b8\n",
        "                        .setLatLng(e.latlng)\n",
        "                        .setContent(&quot;Latitude: &quot; + e.latlng.lat.toFixed(4) +\n",
        "                                    &quot;&lt;br&gt;Longitude: &quot; + e.latlng.lng.toFixed(4))\n",
-       "                        .openOn(map_4987c3d0a55d4118b511aacd4f3075c9);\n",
+       "                        .openOn(map_df8f1c74f74dc29aeaa55696dd0c2fd6);\n",
        "                    }\n",
-       "                map_4987c3d0a55d4118b511aacd4f3075c9.on(&#x27;click&#x27;, latLngPop);\n",
+       "                map_df8f1c74f74dc29aeaa55696dd0c2fd6.on(&#x27;click&#x27;, latLngPop);\n",
        "            \n",
        "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x7f303871a4c0>"
+       "<folium.folium.Map at 0x7f3068729370>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "6fac84a5-4dde-4597-8431-5119e12234cc",
    "metadata": {},
    "outputs": [],
@@ -242,20 +242,20 @@
     "    woody=land_cover_data.lifeform.median(dim='time')\n",
     "    woody=reclassify(woody,bins=[0,1,2],new_values=[np.nan,1,0])\n",
     "    woody=woody.rio.reproject(\"EPSG:4283\")\n",
-    "    write_cog(geo_im=woody.astype(np.int16),\n",
+    "    write_cog(geo_im=woody.astype(np.int8),\n",
     "          fname='5yrMedian/Woody_' + str(year -4) + '-' + str(year) +'.tif',\n",
     "          overwrite=True)\n",
     "    \n",
     "    water=land_cover_data.water_state.median(dim='time')\n",
     "    water=water.rio.reproject(\"EPSG:4283\")\n",
-    "    write_cog(geo_im=water.astype(np.int16),\n",
+    "    write_cog(geo_im=water.astype(np.int8),\n",
     "          fname='5yrMedian/Water_' + str(year -4) + '-' + str(year) +'.tif',\n",
     "          overwrite=True)\n",
     "                      \n",
     "    artificial=land_cover_data.level3.median(dim='time')\n",
     "    artificial=artificial.rio.reproject(\"EPSG:4283\")\n",
     "    artificial=reclassify(artificial,bins=[0,111,112,124,215,216,220],new_values=[np.nan,0,0,0,1,1,0]) #looking at Mt Gambier and Millicent, 'natural bare surface' aligns with built up areas as well as artifical surface.\n",
-    "    write_cog(geo_im=artificial.astype(np.int16),\n",
+    "    write_cog(geo_im=artificial.astype(np.int8),\n",
     "          fname='5yrMedian/Artificial_' + str(year -4) + '-' + str(year) +'.tif',\n",
     "          overwrite=True)\n",
     "    "
@@ -275,6 +275,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d6ff4318-fdca-424b-ba16-c5fa3c419e14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.int8\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ac6480c-9050-4e1d-9700-42f6fcef395e",
    "metadata": {},
    "outputs": [],
    "source": []
